--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 	<!-- link file css -->
 	<link rel="stylesheet" href="animate/animate.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-	<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 	
@@ -37,177 +36,241 @@
 	<link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
 	<link rel="stylesheet" href="font-asome/elegant_font/HTML CSS/style.css">
 	
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/canhan.css">
 	<script src="js/1.js"></script>	
-	<link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
 </head>
 <body>
-	<header>
-		<div class="top"><!--  begin top -->
+	<header id="home"><!--  begin header -->
+		<article class="branking animated bounce wow data-wow-delay=0s"> <!-- begin branking -->
 			<div class="container"> <!-- begin container -->
-				<div class="row"> <!-- begin row -->
+				<div class="row"> <!-- begin  row -->
 					<div class="col-sm-12">
-						<div class="row">
-							<div class="col-sm-7 left"> <!-- begin left -->
-								<ul>
-									<li><i class="fa fa-volume-control-phone" aria-hidden="true"></i> <span>01206700528(DĐ) - 0743899093(ĐB</span></li>
-									<li><a href="#" class="lienhe">Liên hệ quảng cáo</a></li>
-									<li class="facebook"><a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i> Like</a></li>
-									<li class="twitter"><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i> Follow</a></li>
-								</ul>
-							</div> <!-- end left -->
-							<div class="col-sm-5 right text-sm-right"> <!-- begin right -->
-								<button class='dangnhap'>Đăng nhập</button> 
-								<button class='dangky'>Đăng ký</button> 
-								<form action="">
-									<input type="text" name="" class="search">
-									<button class="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
-								</form>
-							</div> <!-- end right -->
-						</div>
+						<a href="#"><i class="fa fa-phone" aria-hidden="true"></i> 01206700528</a>
+						<a href="#"><i class="fa fa-envelope-o" aria-hidden="true"></i> thanhuyenletran@gmail.com</a>
 					</div>
-				</div><!--  end row -->
-			</div> <!-- end conatiner -->
-		</div> <!-- end top -->
-		<div class="logo"> <!-- begin logo -->
-			<div class="container">
-				<div class="row">
-					<div class="col-xs-4 text-sm-left">
-						<img src="images/logo.gif" class="img-responsive" alt="">
-					</div>
-					<div class="col-sm-8 quangcao"></div>
 				</div>
 			</div>
-		</div> <!-- end logo   -->       
-		<nav class="navbar navbar-toggleable-md navbar-light bg-faded"> <!-- begin nav -->
-			<button class="navbar-toggler navbar-toggler-right left" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-		    	<span class="navbar-toggler-icon"></span>
-		  	</button>
-			<div class="container"> <!-- begin container -->
-				<div class="row">
-					<div class="col-sm-12">
-						  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-						    <ul class="navbar-nav mr-auto">
-						     <li class="nav-item">
-						        <a class="nav-link" href="#"><img src="images/trangchu.png"> |</a>
-						      </li>
-						      <li class="nav-item active">
-						        <a class="nav-link" href="#">Thời sự |<span class="sr-only">(current)</span></a>
-						      </li>
-						      <li class="nav-item">
-						        <a class="nav-link" href="#">Thế giới |</a>
-						      </li>
-						      <li class="nav-item">
-						        <a class="nav-link" href="#">Kinh doanh |</a>
-						      </li>
-						       <li class="nav-item">
-						        <a class="nav-link" href="#">Giải trí |</a>
-						      </li>
-						      <li class="nav-item">
-						        <a class="nav-link" href="#">Thể thao |</a>
-						      </li>
-						      <li class="nav-item">
-						        <a class="nav-link" href="#">Pháp luật |</a>
-						      </li>
-						      <li class="nav-item">
-						        <a class="nav-link" href="#">Giáo dục |</a>
-						      </li>
-						      <li class="nav-item">
-						        <a class="nav-link" href="#">Sức khỏe |</a>
-						      </li>
-						      <li class="nav-item">
-						        <a class="nav-link" href="#">Gia đình |</a>
-						      </li>
-						      <li class="nav-item">
-						        <a class="nav-link" href="#">Du lịch |</a>
-						      </li>
-						      <li class="nav-item">
-						        <a class="nav-link" href="#">Khoa học |</a>
-						      </li>
-						      <li class="nav-item">
-						        <a class="nav-link" href="#">Số hóa |</a>
-						      </li>
-						      <li class="nav-item">
-						        <a class="nav-link" href="#">Xe |</a>
-						      </li>
-						      <li class="nav-item">
-						        <a class="nav-link" href="#">Cộng đồng |</a>
-						      </li>
-						      <li class="nav-item">
-						        <a class="nav-link" href="#">Tâm sự |</a>
-						      </li>
-						      <li class="nav-item">
-						        <a class="nav-link" href="#">Video |</a>
-						      </li>
-						      <li class="nav-item">
-						        <a class="nav-link" href="#">Cười |</a>
-						      </li>
-						      <li class="nav-item">
-						        <a class="nav-link last" href="#" >Rao vặt </a>
-						      </li>
-						    </ul>
-						  </div>
-						</div>
-				</div>
-			</div> <!-- end container -->
-		</nav> <!-- end nav -->
-	</header>
+		</article> <!-- end branking -->	
 
-	<section class="trangnhat1"><!--  begin trang nhat -->
-		<div class="container"><!--  begin container -->
-			<div class="row"> <!-- begin row -->
-				<div class="col-sm-6 tn">
-					<img src="images/trangnhat.png">
-				</div>
-				<div class="col-sm-2 tg text-sm-left">
-					<img src="images/english.png">
-				</div>
-				<div class="col-sm-4 tc text-sm-right">
-					<ul>
-						<li>Thứ 5, 16/3/2017 16:15 GMT+7</li>
-						<li><a href="#"> 24h qua</a></li>
-						<li><a href="#" class="img"></a></li>
-					</ul>
-				</div>
-			</div>
+		<nav class="navbar navbar-light bg-faded animated bounce slideInRight wow data-wow-delay=10s"> <!-- begin nav -->
+			<button class="navbar-toggler hidden-sm-up clickme" type="button" data-target="#toi">
+	            		&#9776;
+	          </button>
+			<div class="container"><!--  begin container -->
+				<div class="row"><!--  begin row -->
+					<div class="col-sm-12"> <!-- begin cot -->
+			          	 <div class="navbar-toi" id="toi">
+				            <ul class="nav navbar-nav">
+				              <li class="nav-item active">
+				                <a class="nav-link" href="#home1">Home <span class="sr-only">(current)</span></a>
+				              </li>
+				              <li class="nav-item">
+				                <a class="nav-link" href="#about1">About</a>
+				              </li>
+				              <li class="nav-item">
+				                <a class="nav-link" href="#skill1">Skills</a>
+				              </li>
+				              <li class="nav-item">
+				                <a class="nav-link" href="#education1">Education</a>
+				              </li>
+				            </ul>
+				            <a class="back-home" href="">Back Home</a>
+			          </div>
+				</div> <!-- end cot -->
+			</div>	<!-- end row	 -->
 		</div> <!-- end container -->
-	</section> <!-- end trang nhat -->
-
-	<section class="trangnhat2"><!--  begin trang nhat -->
-		<div class="container"><!--  begin container -->
-			<div class="row"> <!-- begin row -->
-				<div class="col-sm-6 tn2"> <!-- begin tn2 -->
-					<div class="card" style="width: 100%">
-					  <img class="card-img-top" src="http://img.f30.vnecdn.net/2017/03/16/Thutuong-1489653283_490x294.jpg" alt="Card image cap">
-					  <div class="card-block">
-					   <a href="#"><h4 class="card-title">Thủ tướng yêu cầu làm rõ việc chủ tịch tỉnh Bắc Ninh bị đe dọa</h4></a>
-					    <p class="card-text">Bộ Công an được giao khẩn trương điều tra việc các đối tượng đứng sau "bảo kê", đe dọa cán bộ, lãnh đạo sở, ngành và Chủ tịch UBND tỉnh Bắc Ninh..</p>
-					  </div>
+	</nav> <!-- end nav -->
+</header> <!-- end header -->
+	
+	<section class="about" id="about1"> <!-- begin slide -->
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12 text-xs-center noidung">
+					<img src="images/canhan/hinhanh.png" alt="anh le_tran_thanh_uyen" class="animated fadeInUpBig wow data-wow-delay=10s">
+					<h3 class=" animated fadeInUp">thanh uyen le tran</h3>
+					<h4 class=" animated fadeInUp">front end developer website</h4>
+					<div class="row">
+						<div class="col-sm-6 col-sm-offset-3 animated fadeInUp">
+							<p>Hello everyone. My name is Uyen from VietNam. I am Frontend Developer Website. I started cutting HTML things about 1 years ago. I love this work very much. </p>
+						</div>
 					</div>
-				</div> <!-- end tn2 -->
-				<div class="col-sm-2 tg2 text-sm-left"> <!-- begin tg2 -->
-					<div class="card" style="width: 100%"> <!-- begin hinhanh -->
-					  <img class="card-img-top" src="http://st.f1.vnecdn.net/responsive/i/v41/graphics/kimjongnam_banner_3.jpg" alt="Card image cap">
-					</div><!--  end hinh anh -->
-					<div class="card1"> <!-- begin noi dung -->
-					    <a href="#"><p class="card-text">Gia đình bà Hồ Thị Kim Thoa từng mua cổ phần Điện Quang theo cơ chế thỏa thuận <i class="fa fa-camera" aria-hidden="true"></i><i class="fa fa-video-camera" aria-hidden="true"></i></p></a>
-					    <a href="#"><p class="card-text">Gia đình bà Hồ Thị Kim Thoa từng mua cổ phần Điện Quang theo cơ chế thỏa thuận</p></a>
-					    <a href="#"><p class="card-text">Gia đình bà Hồ Thị Kim Thoa từng mua cổ phần Điện Quang theo cơ chế thỏa thuận</p></a>
-					    <a href="#"><p class="card-text">Gia đình bà Hồ Thị Kim Thoa từng mua cổ phần Điện Quang theo cơ chế thỏa thuận</p></a>
-					    <a href="#"><p class="card-text">Gia đình bà Hồ Thị Kim Thoa từng mua cổ phần Điện Quang theo cơ chế thỏa thuận</p></a>
-					    <a href="#"><p class="card-text">Gia đình bà Hồ Thị Kim Thoa từng mua cổ phần Điện Quang theo cơ chế thỏa thuận</p></a>
-					    <a href="#"><p class="card-text">Gia đình bà Hồ Thị Kim Thoa từng mua cổ phần Điện Quang theo cơ chế thỏa thuận</p></a>
-					 </div> <!-- end noidung -->
-					 <div class="gocnhin">
-					 	<img src="images/gocnhin.png" alt="">
-					 	<h3>Ảnh nghi can</h3>
-					 </div>
-				</div> <!-- end tg2 -->
-				<div class="col-sm-2 tc text-sm-right quangcao"> <!-- begin quang cao -->
 					
-				</div> <!-- end quang cao -->
+				</div>
+			</div>
+		</div>
+	</section> <!-- end slide -->
+
+	<section class="skill animated fadeInUpBig wow data-wow-duration=2s" id="skill1"> <!-- begin skill -->
+		<div class="container">
+			<div class="row"> <!-- begin tren -->
+				<div class="col-sm-12 text-xs-center tren">
+					<h3 class="tieude"><i class="fa fa-gears"></i> Skills</h3>
+				</div>
+			</div> <!-- end tren -->
+			<div class="row duoi"> <!-- begin duoi -->
+				<div class="col-sm-6 duoi fadeInRight animated  wow data-wow-duration=2s">
+					<h3><i class="fa fa-calendar-o"></i> Professional skills</h3>
+					<h4>Adobe Photoshop</h4>
+					<div class="thanhtruot">
+						<div class="trang"></div>
+						<div class="tron"></div>
+					</div>
+					<h4>Jquery</h4>
+					<div class="thanhtruot">
+						<div class="trang"></div>
+						<div class="tron"></div>
+					</div>
+					<h4>Mysql</h4>
+					<div class="thanhtruot">
+						<div class="trang"></div>
+						<div class="tron"></div>
+					</div>
+					<h4>PHP</h4>
+					<div class="thanhtruot">
+						<div class="trang"></div>
+						<div class="tron"></div>
+					</div>
+					<h4>Laravel</h4>
+					<div class="thanhtruot">
+						<div class="trang"></div>
+						<div class="tron"></div>
+					</div>	
+				</div>
+				<div class="col-sm-6 duoi">
+					<h3><i class="fa fa-calendar-o"></i> Professional skills</h3>
+					<h4>CSS</h4>
+					<div class="thanhtruot">
+						<div class="trang"></div>
+						<div class="tron"></div>
+					</div>
+					<h4>SASS</h4>
+					<div class="thanhtruot">
+						<div class="trang"></div>
+						<div class="tron"></div>
+					</div>
+					<h4>Git & Github</h4>
+					<div class="thanhtruot">
+						<div class="trang"></div>
+						<div class="tron"></div>
+					</div>
+					<h4>HTML</h4>
+					<div class="thanhtruot">
+						<div class="trang"></div>
+						<div class="tron"></div>
+					</div>
+				</div>
+			</div> <!-- end duoi -->
+		</div>
+	</section> <!-- end skill -->
+
+	<section class="education fadeInLeft animated  wow data-wow-duration=2s" id="education1"> <!-- begin education -->
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12">
+					<h3 class="tieude"><i class="fa fa-graduation-cap"></i> Education</h3>
+				</div>
+			</div>
+			<div class="row gachgiua">
+				<div class="col-sm-12"> <!-- begin 1 noidung trai -->
+					<div class="tron"></div>
+					<div class="row">
+						<div class="col-sm-5 _1noidung trai">
+							<a href="#"><h3>khoa pham training @gmail.com</h3>
+							<h4>11 Jan 2016</h4>
+							<p>Learn: PHP, Laravel, Jquery, MySQLi</p>
+						</div>
+					</div>
+				</div><!--  end 1 noi dung  trai -->
+				<div class="col-sm-12"> <!-- begin 1 noidung -->
+					<div class="tron"></div>
+					<div class="row phai">
+						<div class="col-sm-5 _1noidung trai phai">
+							<a href="#"><h3>HUFI University</h3></a>
+							<h4>23 July 2016</h4>
+							<p>Learn: Mysql server, C#, C...</p>
+						</div>
+					</div>
+				</div><!--  end 1 noi dung -->	
 			</div>
 		</div> <!-- end container -->
-	</section> <!-- end trang nhat -->
+	</section> <!-- end education -->
+	<section class="portfolio"><!--  begin portfolio -->
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12 text-sm-center">
+					<h3 class="tieude"><i class="fa fa-th-list"></i>Portfolio</h3>
+				</div>
+				<div class="col-sm-12">
+					<div class="row">
+						<div class="col-sm-4 text-sm-center hien animated bounceInDown wow">
+							<a href="vnexpress.html">
+								<img src="images/canhan/vnexpress.png" alt="" class="img-responsive">
+								<div class="_1noidung">
+									<h3>News</h3>
+								</div>
+							</a>
+						</div>
+						<div class="col-sm-4 text-sm-center hien animated bounceInRight wow">
+							<a href="thefox2.html">
+								<img src="images/canhan/thefox2.png" class="img-responsive" alt="">
+								<div class="_1noidung">
+									<h3>Magazine</h3>
+								</div>
+							</a>
+						</div>
+						<div class="col-sm-4 text-sm-center hien animated bounceInUp wow">
+							<a href="thefox.html">
+								<img src="images/canhan/thefox.png" class="img-responsive" alt="">
+								<div class="_1noidung">
+									<h3>Show all</h3>
+								</div>
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section><!--  end portfolio -->
+	<footer class="fadeInLeft animated  wow data-wow-duration=4s"> 
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12">
+					<p>
+						<span >
+							<a href="#">
+								<span class="hinhnho">facebook</span>
+								<i class="fa fa-facebook" aria-hidden="true"></i>
+							</a>
+							<a href="#" >
+								<span class="hinhnho">linkedin</span>
+								<i class="fa fa-linkedin" aria-hidden="true"></i>
+							</a>
+							<a href="#" >
+								<span class="hinhnho">twitter</span>
+								<i class="fa fa-twitter" aria-hidden="true"></i>
+							</a>
+						</span>
+						<span class="re">
+							<a href="#" class="re" > 
+								<span class="hinhnho">whatsapp</span>
+								<i class="fa fa-whatsapp" aria-hidden="true"></i>
+							</a>
+							<a href="#" class="re" class="col-sm-6">
+								<span class="hinhnho">youtube</span>
+								<i class="fa fa-youtube" aria-hidden="true"></i>
+							</a>
+							<a href="#" class="re">
+								<span class="hinhnho">vimeo</span>
+								<i class="fa fa-vimeo" aria-hidden="true"></i>
+							</a>
+						</span>
+					</p>
+				</div>
+			</div>
+
+		</div>
+		
+	</footer>
+
 </body>
 </html>
